--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,15 +7,15 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
-	<div class='navbar navbar-default'>
-		<ul class='nav navbar-nav' style='float:right;'>
+	<nav class='navbar navbar-default'>
+		<ul class='nav navbar-nav pull-right'>
 			<li><%= link_to 'Luis F Perez', '/' %></li>
 			<li><%= link_to 'About', '/about' %></li>
 			<li><%= link_to 'Early Career', '/early_career' %></li>
 			<li><%= link_to 'Now', '/now' %></li>
 			<li><%= link_to 'Contact', '/contact' %></li>
 		</ul>	
-	</div>
+	</nav>
 	<div class='container'>
 		<%= yield %>
 	</div>
